--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.9",
     "@types/three": "^0.169.0",
     "react": "^18.3.1",
